--- a/FRONTEND/CSS/style.css
+++ b/FRONTEND/CSS/style.css
@@ -771,3 +771,87 @@ footer {
 }
 
 /* services end */
+
+/* about us */
+.hero-about-us {
+    width: 100%;
+    height: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("/FRONTEND/images/fast-delivery-truck.jpg");
+    background-size: cover;
+    background-position: center;
+    color: white;
+}
+
+.container-tentang{
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+.tentang{
+    width: 100%;
+}
+.tentang>p{
+ width: 100%;
+}
+.img-about{
+    display: flex;
+    justify-content:end ;
+    width: 100%;
+}
+.img-about img{
+    border-radius: .4rem;
+    width: 80%;
+    height: 30rem;
+}
+
+/* visi misi */
+.visi-misi-page{
+    position: relative;
+}
+.visi-misi-page>h1{
+    margin-right: 35rem;
+    color: black;
+}
+.container-visi-misi{
+    width: 100%;
+    height: 25rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 1rem;
+    color: white;
+  
+}
+.icon-lamp{
+    position: absolute;
+    top: 4rem;
+    left: 8rem;
+    background-color: #D9D9D9;
+    width: 9rem;
+    height: 9rem;
+    font-size: 6rem;
+    padding: 1rem;
+    border-radius: 50%;
+}
+.visi,.misi{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+    height: 100%;
+    padding: 1.5rem;
+    background-color: var(--main);
+    gap: 1rem;
+}
+.misi>h4{
+    padding: 2rem;
+    border-radius: 2rem;
+    background-color: #D9D9D9;
+    color: black;
+}
+
+/* visi misi end */
+/* about us end */
