--- a/CSS/style.css
+++ b/CSS/style.css
@@ -779,7 +779,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("/FRONTEND/images/fast-delivery-truck.jpg");
+    background-image: url("/FRONTEND/images/fast-delivery-truck.jpgg");
     background-size: cover;
     background-position: center;
     color: white;
