--- a/CSS/style.css
+++ b/CSS/style.css
@@ -106,7 +106,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('/images/courier-attaching-label.png');
+    background-image: url('../images/courier-attaching-label.png');
     background-size: cover;
     background-position: center;
     color: white;
