--- a/CSS/style.css
+++ b/CSS/style.css
@@ -917,7 +917,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("/images/fast-delivery-truck.jpg");
+    background-image: url("../images/fast-delivery-truck.jpg");
     background-size: cover;
     background-position: center;
     color: white;
@@ -1226,7 +1226,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("/images/fast-delivery-truck.jpg");
+    background-image: url("../images/fast-delivery-truck.jpg");
     background-size: cover;
     background-position: center;
     color: white;
@@ -1315,7 +1315,7 @@ footer {
 
 /* contact */
 .container-contact {
-    background-image: url('/images/IMG2.jpg');
+    background-image: url('../images/IMG2.jpg');
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     display: flex;
